--- a/cloudFrontEnd/src/app/video/video.component.scss
+++ b/cloudFrontEnd/src/app/video/video.component.scss
@@ -1,5 +1,5 @@
 video.video {
-  @media handheld and (max-device-width: 1000px), screen and (max-width: 1000px){
+  @media handheld and (max-device-width: 1000px), screen and (max-width: 1000px) {
     width: 700px;
   }
   @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) {
@@ -14,7 +14,7 @@ video.video {
 
 // Smaller video size in multi display
 video.multi {
-    max-width: 700px;
+  max-width: 700px;
 }
 
 .mx-auto {
@@ -42,13 +42,24 @@ div.latency-limit-selector {
     border-bottom: black 1px solid;
     border-left: black 1px solid;
     border-right: black 1px solid;
+    border-radius: 0.5rem;
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
     display: block;
     position: relative;
     top: -5px;
     > label {
+      > mat-icon {
+        padding-left: 0.2rem;
+      }
+    }
+    > label {
       margin-right: 5px;
       position: relative;
       top: 1px;
+      > mat-icon {
+        color: white;
+      }
     }
     > select {
       color: white;
@@ -59,3 +70,27 @@ div.latency-limit-selector {
     }
   }
 }
+
+.audio-out-disabled {
+  color: gray !important;
+}
+
+.audio-out-inactive {
+  color: white !important;
+}
+
+.audio-out-active {
+  animation: pulsing 1300ms infinite;
+}
+@keyframes pulsing {
+  0% {
+    color: #800;
+  }
+  50% {
+    color: #f66;
+  }
+  100% {
+    color: #800;
+  }
+}
+
