--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -67,19 +67,23 @@
     <div class="float-right-on-full-width" *ngIf="utilsService.loggedIn">
       <button mat-button [matMenuTriggerFor]="menuGeneral">General</button>
       <mat-menu #menuGeneral="matMenu">
+        <button *ngIf="!utilsService.isAdmin" mat-menu-item (click)="configSetup();menuClosed()">
+          Cameras Configuration
+        </button>
         <button mat-menu-item (click)="confirmLogoff();menuClosed()">
           Log Off
         </button>
-        <button *ngIf="utilsService.isAdmin" mat-menu-item (click)="changeAdminEmail();menuClosed()"
-                matTooltip="Change the email address for the admin account"
-                matTooltipClass="tooltip">
-          Change Admin Email Address
-        </button>
-        <button *ngIf="!utilsService.isAdmin" mat-menu-item (click)="configSetup();menuClosed()">
-          Configure Camera Setup
-        </button>
         <button mat-menu-item (click)="changePassword();menuClosed()">
           Change {{utilsService.isAdmin ? "Admin " : ""}}Password
+        </button>
+        <button mat-menu-item (click)="changeEmail();menuClosed()"
+                matTooltip="{{'Change the email address for the ' + utilsService.isAdmin ?  'admin' : 'client' + ' account'}}"
+                matTooltipClass="tooltip">
+          Change {{utilsService.isAdmin ?  "Admin " : "" }}Account Email
+        </button>
+        <div *ngIf="!utilsService.isAdmin" class="dropdown-divider"></div>
+        <button *ngIf="!utilsService.isAdmin" mat-menu-item (click)="setIp();menuClosed()">
+          Save Current Public IP
         </button>
         <button *ngIf="utilsService.isAdmin" mat-menu-item (click)="setUpSMTPClient();menuClosed()"
                 matTooltip="Set up the SMTP client used for password reset emails for the admin and all client accounts"
@@ -103,10 +107,6 @@
         <div *ngIf="!utilsService.isAdmin" matTooltip="Change local NVR user account password/username/email and/or set up local NVR SMTP details" matTooltipClass="tooltip">
           <button mat-menu-item (click)="localAdminFunctionsForNVR();menuClosed()">Admin Functions</button>
         </div>
-        <div *ngIf="!utilsService.isAdmin" class="dropdown-divider"></div>
-        <button *ngIf="!utilsService.isAdmin" mat-menu-item (click)="setIp();menuClosed()">
-          Save Current Public IP
-        </button>
         <button *ngIf="!utilsService.isAdmin && !utilsService.hasLocalAccount" mat-menu-item (click)="registerLocalNVRAccount(); menuClosed()">Register Local NVR Account</button>
         <button *ngIf="!utilsService.isAdmin && utilsService.hasLocalAccount" mat-menu-item (click)="removeLocalNVRAccount(); menuClosed()">Remove Local NVR Account</button>
         <button *ngIf="!utilsService.isAdmin" mat-menu-item (click)="drawdownCalc();menuClosed()">
