--- a/cloudFrontEnd/src/app/camera-params/camera-params.component.html
+++ b/cloudFrontEnd/src/app/camera-params/camera-params.component.html
@@ -1,7 +1,7 @@
 <div class="camera-params-container">
   <mat-card class="mat-elevation-z8">
     <mat-card-title>View/Set Parameters</mat-card-title>
-    <mat-card-subtitle>{{cam?.camera?.name}}</mat-card-subtitle>
+    <mat-card-subtitle>{{cam?.name}}</mat-card-subtitle>
     <mat-card-content class="wait-box mat-form-field-flex" *ngIf="downloading">
       <mat-spinner [diameter]="25"></mat-spinner>
       <span>Please wait..</span>
@@ -65,7 +65,7 @@
           <mat-form-field appearance="standard">
             <mat-label>Camera Name</mat-label>
             <input matInput type="text" formControlName="cameraName"
-                   placeholder="Start Date">
+                   placeholder="Camera Name">
             <mat-hint>Change camera name if required</mat-hint>
             <mat-error *ngIf="hasError('cameraName', 'required')">Camera name is required</mat-error>
             <mat-error *ngIf="hasError('cameraName', 'maxlength')">Max camera name length exceeded</mat-error>
