--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -18,22 +18,26 @@
         Select Camera
       </button>
       <mat-menu #menuSelectCamera="matMenu">
-        <ng-container *ngFor="let cs of cameraStreams">
-          <button  mat-menu-item (click)="setVideoStream(cs);menuClosed()">
-            {{cs.camera.name + " (" + cs.stream.descr + ")"}}
+        <ng-container *ngFor="let camKV of cameraSvc.cameras | keyvalue">
+          <ng-container *ngFor="let streamKV of camKV.value.streams | keyvalue">
+            <button mat-menu-item (click)="setVideoStream(camKV.value, streamKV.value);menuClosed()">
+              {{camKV.value.name + " (" + streamKV.value.descr + ")"}}
           </button>
+          </ng-container>
         </ng-container>
         <button mat-menu-item (click)="multiCamView();menuClosed()">Multi Camera View</button>
       </mat-menu>
     </div>
 
     <div [style]="'display:'+ ((utilsService.loggedIn && !utilsService.isAdmin) ? 'inherit' : 'none')">
-      <button mat-button [matMenuTriggerFor]="menuSelectRecording">Select Recording</button>
+      <button mat-button [matMenuTriggerFor]="$any(menuSelectRecording)">Select Recording</button>
       <mat-menu #menuSelectRecording="matMenu">
-        <ng-container *ngFor="let cs of cameraStreams">
-          <button mat-menu-item (click)="showRecording(cs);menuClosed()" *ngIf="cs.stream.recording.enabled">
-            {{cs.camera.name + " (" + cs.stream.descr + ")"}}
+        <ng-container *ngFor="let camKV of cameraSvc.cameras | keyvalue">
+          <ng-container *ngFor="let streamKV of camKV.value.streams | keyvalue">
+            <button mat-menu-item (click)="showRecording(camKV.value, streamKV.value);menuClosed()" *ngIf="streamKV.value.recording.enabled">
+              {{camKV.value.name + " (" + streamKV.value.descr + ")"}}
           </button>
+        </ng-container>
         </ng-container>
       </mat-menu>
     </div>
@@ -41,10 +45,10 @@
     <div [style]="'display:'+ ((utilsService.loggedIn && !utilsService.isAdmin) ? 'inherit' : 'none')">
       <button mat-button [matMenuTriggerFor]="menuCameraSettings">Camera Settings</button>
       <mat-menu #menuCameraSettings="matMenu">
-        <ng-container *ngFor="let cam of cameras">
-          <button *ngIf="cam.address!=''&&cam.cameraParamSpecs.camType !== cameraTypes.none" mat-menu-item
-                  (click)="cameraControl(cam);menuClosed()">
-            {{cam.name}}
+        <ng-container *ngFor="let camKV of cameraSvc.cameras | keyvalue">
+          <button *ngIf="camKV.value.address!=''&&camKV.value.cameraParamSpecs.camType !== cameraTypes.none" mat-menu-item
+                  (click)="cameraControl(camKV.value);menuClosed()">
+            {{camKV.value.name}}
           </button>
         </ng-container>
       </mat-menu>
