--- a/cloudFrontEnd/src/app/video/video.component.scss
+++ b/cloudFrontEnd/src/app/video/video.component.scss
@@ -1,20 +1,27 @@
-video.video {
-  @media handheld and (max-device-width: 1000px), screen and (max-width: 1000px) {
-    width: 700px;
+div.video {
+  video {
+    @media handheld and (max-device-width: 1000px), screen and (max-width: 1000px) {
+      width: 700px;
+    }
+    @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) {
+      width: 900px;
+    }
+    cursor: zoom-in;
   }
-  @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) {
-    width: 900px;
-  }
+
   border: 0.25rem solid darkblue;
   border-right-color: #3939f3;
   border-bottom-color: #3939f3;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+  overflow: hidden;
 }
 
 // Smaller video size in multi display
-video.multi {
-  max-width: 700px;
+div.multi {
+  > video {
+    max-width: 700px;
+  }
 }
 
 .mx-auto {
@@ -71,12 +78,28 @@ div.latency-limit-selector {
   }
 }
 
+.video-buttons {
+  cursor: pointer;
+  :hover {
+    transform: scale(1.3);
+    transition-duration: 350ms;
+    transition-property: transform;
+  }
+  :not(:hover) {
+    transform: scale(1);
+    transition-duration: 350ms;
+    transition-property: transform;
+  }
+}
+
 .audio-out-disabled {
   color: gray !important;
+  cursor: pointer;
 }
 
 .audio-out-inactive {
   color: white !important;
+  cursor: pointer;
 }
 
 .audio-out-active {
@@ -110,3 +133,4 @@ div.latency-limit-selector {
     animation:  flash 2000ms steps(3, start) forwards;
   }
 }
+
