--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.html
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.html
@@ -12,22 +12,22 @@
         </mat-form-field>
       </div>
       <div>
-      <mat-form-field appearance="fill">
-        <mat-label>Motion Events</mat-label>
+        <mat-form-field appearance="fill">
+          <mat-label>Motion Events</mat-label>
           <mat-select #selector (selectionChange)="showMotionEvent($event)"
                       matTooltip="Select a recording by date and time"
                       matTooltipClass="tooltip">
-          <mat-option *ngFor="let event of motionEvents" [value]="event">
-            {{event.dateTime}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+            <mat-option *ngFor="let event of motionEvents" [value]="event">
+              {{event.dateTime}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
       <div *ngIf="!downloading" [ngSwitch]="confirmDelete" class="delete-button-set">
         <div *ngSwitchCase="false"
-             matTooltip="{{'Delete the currently selected recording'}}"
+             matTooltip="{{isGuest ? 'Disabled for guest' : 'Delete the currently selected recording'}}"
              matTooltipClass="tooltip">
-          <button (click)="confirmDelete=true" color="warning" mat-flat-button
+          <button (click)="confirmDelete=true" [disabled]="isGuest" color="warning" mat-flat-button
                   matTooltip="Delete the currently displayed recording" matTooltipClass="tooltip">
             Delete This Recording
           </button>
@@ -59,7 +59,7 @@
       <span>Please wait..</span>
     </mat-card-content>
   </mat-card>
-  <div>
+  <div class="recording-container">
     <app-video></app-video>
     <div class="buttons-flex-container">
       <mat-card class="recording-buttons hide-background mat-elevation-z8">
