--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.html
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.html
@@ -1,11 +1,13 @@
 <div [ngClass]="{'no-display': !visible}" class="flex-container">
+  <div class="recording-container">
   <mat-card class="events-select mat-elevation-z8 hide-background">
     <mat-card-title>Select a Motion Event</mat-card-title>
     <mat-card-content>
       <div>
         <mat-form-field appearance="fill">
           <mat-label>Choose a date</mat-label>
-          <input matInput readonly [matDatepickerFilter]="dateFilter" [min]="minDate" [max]="maxDate" [value]="selectedDate" (dateChange)="setDateSlot($event)" [matDatepicker]="picker">
+            <input matInput readonly [matDatepickerFilter]="dateFilter" [min]="minDate" [max]="maxDate"
+                   [value]="selectedDate" (dateChange)="setDateSlot($event)" [matDatepicker]="picker">
           <mat-hint></mat-hint>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker [startAt]="_selectedDate"></mat-datepicker>
@@ -59,9 +61,21 @@
       <span>Please wait..</span>
     </mat-card-content>
   </mat-card>
-  <div class="recording-container">
+    <div>
     <app-video></app-video>
     <div class="buttons-flex-container">
+        <div class="additional-buttons">
+          <label *ngIf="hasAudio()" class="video-buttons"
+                 [matTooltip]="'Click to ' + (isMuted() ? 'unmute' : 'mute') + ' sound'"
+                 matTooltipClass="tooltip">
+            <mat-icon (click)="toggleMuteAudio()">{{ isMuted() ? 'volume_off' : 'volume_up' }}</mat-icon>
+          </label>
+          <label class="video-buttons"
+                 matTooltip="Set full screen"
+                 matTooltipClass="tooltip">
+            <mat-icon (click)="video.setFullScreen()">fullscreen</mat-icon>
+          </label>
+        </div>
       <mat-card class="recording-buttons hide-background mat-elevation-z8">
         <mat-button-toggle-group aria-label="Playback control" name="playbackControl"
                                  [(ngModel)]="selectedPlaybackMode">
@@ -94,6 +108,7 @@
       </mat-card>
     </div>
   </div>
+</div>
 </div>
 <br>
 <div [ngClass]="{'no-display': !noVideo}" class="alert-warning">No Video Clips Available For {{cam?.name}}
