--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
@@ -26,6 +26,7 @@ mat-icon.faster-forward {
 
 mat-card.recording-buttons {
   padding: 0.4rem;
+
   > mat-button-toggle-group > button{
     min-width: 0;
     border-right: .2px solid #646363;
@@ -35,14 +36,20 @@ mat-card.recording-buttons {
   }
 }
 
+div.additional-buttons {
+  margin-top: 0.3rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 div.no-display {
   display: none;
 }
 
-div.delete-button-set
-{
-    > div
-    {
+div.delete-button-set {
+  > div {
         button{
           margin-top: 0.4rem;
           margin-right: 0.4rem;
@@ -50,14 +57,24 @@ div.delete-button-set
     }
 }
 
-div.download-button
-{
+div.download-button {
   >button{
     width: 167.38px;
   }
+
   margin-top: 0.4rem;
 }
 
 div.recording-container {
-  margin-left: 1rem;
+  > mat-card {
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+  }
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  > div {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
