--- a/cloudFrontEnd/src/app/video/video.component.scss
+++ b/cloudFrontEnd/src/app/video/video.component.scss
@@ -1,28 +1,32 @@
-@mixin border-characteristics {
+@mixin common-characteristics {
   width: fit-content;
+  @media handheld and (min-device-width: 900px), handheld and (orientation: landscape), screen and (min-width: 900px) {
   border: 0.25rem solid darkblue;
   border-right-color: #3939f3;
   border-bottom-color: #3939f3;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+  }
   overflow: hidden;
+  cursor: zoom-in;
 }
 
 div.video {
   video {
-    @media handheld and (max-device-width: 1000px), screen and (max-width: 1000px) {
+    max-width: 100dvw;
+    max-height: 100dvh;
+    @media handheld and (min-device-width: 800px), screen and (min-width: 800px) and (min-height: 400px){
       width: 700px;
     }
-    @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) {
+    @media handheld and (min-device-width: 1001px), screen and (min-width: 1001px) and (min-height: 700px) {
       width: 900px;
     }
-    @media handheld and (min-device-width: 1500px), screen and (min-width: 1500px) {
+    @media handheld and (min-device-width: 1500px), screen and (min-width: 1500px) and (min-height: 900px) {
       width: 1200px;
     }
-    cursor: zoom-in;
   }
 
-  @include border-characteristics;
+  @include common-characteristics;
 }
 
 .video-and-controls {
@@ -34,11 +38,13 @@ div.video {
 // Smaller video size in multi display
 div.multi {
   > video {
+    max-width: 100dvw;
+    max-height: 100dvh;
+    @media handheld and (min-device-width: 800px), screen and (min-width: 800px) and (min-height: 400px){
     width: 700px;
   }
-
-  cursor: zoom-in;
-  @include border-characteristics;
+  }
+  @include common-characteristics;
 }
 
 .mx-auto {
@@ -100,33 +106,6 @@ div.latency-limit-selector {
   }
 }
 
-.video-buttons {
-  cursor: pointer;
-  @media only screen and (max-width: 768px){
-    :active {
-      scale: 1.3;
-      transition: scale 350ms linear
-    }
-    :not(:active) {
-      scale: 1;
-      transition-property: transform;
-      transition: scale 350ms linear;
-    }
-  }
-  @media only screen and (min-width: 768px) {
-    :hover {
-      scale: 1.3;
-      transition: scale 350ms
-    }
-
-    :not(:hover) {
-      scale: 1;
-      transition-property: transform;
-      transition: scale 350ms linear;
-    }
-  }
-}
-
 .audio-out-disabled {
   color: gray !important;
   cursor: pointer;
@@ -163,6 +142,15 @@ div.latency-limit-selector {
   100% {
     color: #650303;
   }
+}
+
+span.vid-time {
+  font-size: medium;
+  color: #c7cef3;
+}
+span.duration-time {
+  font-size: medium;
+  color: #858585;
 }
 
 .latency-chasing {
