--- a/cloudFrontEnd/src/app/live-container/ptzcontrols/preset-button/preset-button.component.html
+++ b/cloudFrontEnd/src/app/live-container/ptzcontrols/preset-button/preset-button.component.html
@@ -1,8 +1,9 @@
-<button class="preset-button" mat-mini-fab (click)="presetPressed()" [color]="operation != 0 ? 'warn' : 'accent'">
+<button class="preset-button" mat-mini-fab (click)="presetPressed()" [color]="operation != 0 ? 'warn' : 'accent'"
+          [disabled]="isGuest">
   <div>
     {{
     presetNumber
     }}
-  </div>
+</div>
 </button>
 
