--- a/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzbutton/ptzbutton.component.html
+++ b/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzbutton/ptzbutton.component.html
@@ -1,6 +1,7 @@
-<div [matTooltip]="ptzBtnMatTooltip"
+<div [matTooltip]="isGuest ? 'Disabled for guest' : ptzBtnMatTooltip"
               matTooltipClass="tooltip">
-  <button mat-icon-button (mousedown)="move()" (touchstart)="move()" (mouseup)="stop()" (touchend)="stop()">
+  <button mat-icon-button (mousedown)="move()" (touchstart)="move()" (mouseup)="stop()" (touchend)="stop()"
+        [disabled]="isGuest">
     <mat-icon [style.transform]="'scale('+scale+')'">{{matIcon}}</mat-icon>
-  </button>
+</button>
 </div>
