--- a/cloudFrontEnd/src/app/nav/nav.component.html
+++ b/cloudFrontEnd/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
         Select Camera
       </button>
       <mat-menu #menuSelectCamera="matMenu">
-        <ng-container *ngFor="let camKV of cameraSvc.getCameras() | keyvalue">
+        <ng-container *ngFor="let camKV of cameras | keyvalue">
           <ng-container *ngFor="let streamKV of camKV.value.streams | keyvalue">
             <button mat-menu-item (click)="setVideoStream(camKV.value, streamKV.value);menuClosed()">
               {{ camKV.value.name + " (" + streamKV.value.descr + ")" }}
@@ -32,7 +32,7 @@
     <div [style]="'display:'+ ((utilsService.loggedIn && !utilsService.isAdmin) ? 'inherit' : 'none')">
       <button mat-button [matMenuTriggerFor]="$any(menuSelectRecording)">Select Recording</button>
       <mat-menu #menuSelectRecording="matMenu">
-        <ng-container *ngFor="let camKV of cameraSvc.getCameras() | keyvalue">
+        <ng-container *ngFor="let camKV of cameras | keyvalue">
           <ng-container *ngFor="let streamKV of camKV.value.streams | keyvalue">
             <button mat-menu-item (click)="showRecording(camKV.value, streamKV.value);menuClosed()"
                     *ngIf="streamKV.value.recording.enabled">
@@ -46,7 +46,7 @@
     <div [style]="'display:'+ ((utilsService.loggedIn && !utilsService.isAdmin) ? 'inherit' : 'none')">
       <button mat-button [matMenuTriggerFor]="menuCameraSettings">Camera Settings</button>
       <mat-menu #menuCameraSettings="matMenu">
-        <ng-container *ngFor="let camKV of cameraSvc.getCameras() | keyvalue">
+        <ng-container *ngFor="let camKV of cameras | keyvalue">
           <button *ngIf="camKV.value.address!=''&&camKV.value.cameraParamSpecs.camType !== cameraTypes.none"
                   mat-menu-item
                   (click)="cameraControl(camKV.value);menuClosed()">
