--- a/cloudFrontEnd/src/app/config-setup/config-setup.component.html
+++ b/cloudFrontEnd/src/app/config-setup/config-setup.component.html
@@ -107,7 +107,7 @@
         <span
           [matTooltip]="cam.value.cred == '' ? 'Camera credentials are not set, please enter a username and password. If your cameras do not use authentication for web admin or snapshots, this will not be required' : isGuest ? 'Disabled for guest' : 'Set or change the user name and password used to access the cameras. All cameras should have the same user name and password.'"
           matTooltipClass="tooltip">
-          <button class="change-password-button"
+          <button class="change-password-button2"
                   mat-icon-button
                   [disabled]="isGuest"
                   (click)="togglePasswordDialogue(cam.key)">
@@ -170,9 +170,10 @@
       <ng-container matColumnDef="cameraParamSpecs">
         <th mat-header-cell *matHeaderCellDef>Camera Type.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="outline" [style.width.px]="150">
+          <mat-form-field appearance="outline" [style.width.px]="185">
             <!--Call setUpTableFormControls after  updateCamField on changed selection to ensure the address field
                 enabled state is updated.-->
+            <mat-label>Camera type (if listed)</mat-label>
             <mat-select [formControl]="getCamControl(i, 'cameraParamSpecs')"
                         (selectionChange)="updateCamField(i, 'cameraParamSpecs'); setUpTableFormControls()"
                         matTooltip="Select the camera type to enable control of image text and infra red status from the web application. Set to 'Not Listed' to disable this feature, or if the camera type is not listed."
@@ -187,7 +188,7 @@
       <ng-container matColumnDef="ftp">
         <th mat-header-cell *matHeaderCellDef>FTP From Camera.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="outline" [style.width.px]="85">
+          <mat-form-field appearance="outline" [style.width.px]="95">
             <mat-select [formControl]="getCamControl(i, 'ftp')"
                         (selectionChange)="updateCamField(i, 'ftp')"
                         [disableControl]="getFTPDisabledState(cam.value)"
@@ -205,7 +206,7 @@
       <ng-container matColumnDef="retrigger-window">
         <th mat-header-cell *matHeaderCellDef>Retrigger Window.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
-          <mat-form-field appearance="outline" [style.width.px]="50">
+          <mat-form-field appearance="outline" [style.width.px]="70">
             <mat-select [formControl]="getCamControl(i, 'retriggerWindow')"
                         (selectionChange)="updateCamField(i, 'retriggerWindow')"
                         [disableControl]="cam.value.ftp == 'none'"
@@ -223,6 +224,7 @@
         <th mat-header-cell *matHeaderCellDef>Address.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
           <mat-form-field appearance="outline" [style.width.px]="180">
+            <mat-label>{{ cam.key }} IP address</mat-label>
             <input matInput type="text" autocomplete="off" maxlength="15" [formControl]="getCamControl(i, 'address')"
                    matTooltip="The IP address of {{cam.key}}. This is required if the ControlURI is set to anything other than 'None'."
                    matTooltipClass="tooltip"
@@ -236,6 +238,7 @@
         <th mat-header-cell *matHeaderCellDef>Snapshot URI.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
           <mat-form-field appearance="outline" [style.width.px]="300">
+            <mat-label>URL for snapshot from {{ cam.key }}</mat-label>
             <input matInput type="text" autocomplete="off" maxlength="150"
                    [formControl]="getCamControl(i, 'snapshotUri')"
                    matTooltip="The URI for snapshots for {{cam.key}}. This is used to view the image from the camera by clicking on the camera ID in the Cameras Configuration editor."
@@ -307,6 +310,7 @@
         <th mat-header-cell *matHeaderCellDef>ONVIF Base Address.</th>
         <td mat-cell *matCellDef="let cam; let i = dataIndex">
           <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>ONVIF host:port</mat-label>
             <input matInput type="text" autocomplete="off" maxlength="22"
                    [formControl]="getCamControl(i, 'onvifHost')"
                    matTooltip="The IP address and port (if not 80) for {{cam.key}} ONVIF operations. This is required if PTZ control is enabled for {{cam.key}}."
@@ -327,7 +331,7 @@
                    class="streams-info mat-elevation-z10">
               <ng-container matColumnDef="stream_id">
                 <th mat-header-cell *matHeaderCellDef>Stream ID</th>
-                <td mat-cell *matCellDef="let stream" [width]="60"
+                <td mat-cell *matCellDef="let stream" [width]="60" class="stream-key"
                     matTooltip="The logical id of the stream (sequential numbering)"
                     matTooltipClass="tooltip">
                   {{ stream.key }}
@@ -339,15 +343,17 @@
                   <button mat-icon-button matTooltip="Delete this stream" matTooltipClass="tooltip"
                           [disabled]="(cam.value.streams.size <= 1) || confirmSave || confirmNew"
                           (click)="deleteStream(cam.key, stream.key)">
-                    <mat-icon>delete</mat-icon>
+                    <mat-icon class="trash-can">delete</mat-icon>
                   </button>
                 </td>
               </ng-container>
               <ng-container matColumnDef="descr">
                 <th mat-header-cell *matHeaderCellDef> Descr.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
+
                   <mat-form-field appearance="outline">
-                    <input matInput type="text" autocomplete="off" maxlength="20"
+                      <mat-label>Stream description</mat-label>
+                      <input matInput type="text" autocomplete="off" maxlength="20"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'descr')"
                            matTooltip="Set the description for {{stream.key}}. This is usually relating to the resolution of the stream."
                            matTooltipClass="tooltip"
@@ -380,7 +386,8 @@
               <ng-container matColumnDef="audio_encoding">
                 <th mat-header-cell *matHeaderCellDef>Audio Encoding</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="outline" [style.width.px]="90">
+                  <mat-form-field appearance="outline" [style.width.px]="120">
+                    <mat-label>Audio enc.</mat-label>
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'audio_encoding')"
                                 (selectionChange)="updateAudioEncoding($event, stream.value)"
                                 matTooltip="Set the audio encoding (G711 or AAC) for {{stream.key}}. If you are unsure, select 'Not Listed'"
@@ -402,6 +409,7 @@
                 <th mat-header-cell *matHeaderCellDef> Netcam URI.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
                   <mat-form-field appearance="outline">
+                    <mat-label>RTSP url for {{ stream.key }}</mat-label>
                     <input matInput type="text" autocomplete="off" maxlength="105"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'netcam_uri')"
                            matTooltip="Set the URI for connection to the camera stream. This is in the form 'rtsp://<ip address>/<uri>"
@@ -447,6 +455,7 @@
                 <th mat-header-cell *matHeaderCellDef>Motion Threshold</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index" [style.width.px]="100">
                   <mat-form-field appearance="outline"  [style.width.px]="95">
+                    <mat-label>Threshold</mat-label>
                     <input matInput type="number" autocomplete="off" maxlength="10"
                            [formControl]="getStreamControl(camIndex, streamIndex, 'threshold')"
                            [disableControl]="!stream.value.motion.enabled"
@@ -469,7 +478,7 @@
               <ng-container matColumnDef="trigger_recording_on">
                 <th mat-header-cell *matHeaderCellDef>Trigger Recording On</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="outline" [style.width.px]="80">
+                  <mat-form-field appearance="outline" [style.width.px]=110>
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'trigger_recording_on')"
                                 (selectionChange)="setRecordingTrigger($event, stream.value)"
                                 [disableControl]="!stream.value.motion.enabled"
@@ -490,7 +499,7 @@
               <ng-container matColumnDef="preambleFrames">
                 <th mat-header-cell *matHeaderCellDef>Preamble Frames.</th>
                 <td mat-cell *matCellDef="let stream; let streamIndex = index">
-                  <mat-form-field appearance="outline" [style.width.px]="50">
+                  <mat-form-field appearance="outline" [style.width.px]="70">
                     <mat-select [formControl]="getStreamControl(camIndex, streamIndex, 'preambleFrames')"
                                 (selectionChange)="updateStreamField(camIndex, streamIndex, 'preambleFrames')"
                                 [disableControl]="getPreambleFramesDisabledState(cam.value, stream.value)"
@@ -669,10 +678,12 @@
             </button>
           </span>
           </ng-container>
-          <mat-card-content class="wait-box mat-form-field-flex" *ngIf="gettingCameraDetails">
-            <mat-spinner [diameter]="25"></mat-spinner>
-            <span>Getting camera details, Please wait..</span>
-          </mat-card-content>
+            <mat-card-content *ngIf="gettingCameraDetails" class="wait-box">
+                <span>
+                    <mat-spinner [diameter]="25"></mat-spinner>
+                    <span>Getting camera details, Please wait..</span>
+                </span>
+           </mat-card-content>
         </td>
       </ng-container>
 
